--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 :root {
   --primary-color: #ff3399;
   --secondary-color: #1b2021;
-  --light-color: ;
+  --light-color: #ea638c;
 }
 
 html {
@@ -40,7 +40,6 @@ body {
 /* Navigation styles */
 nav {
   position: relative;
-  /* z-index: 1; */
   padding: 1.5rem 2rem;
 }
 
@@ -168,7 +167,7 @@ i {
 
 .about-title {
   font-size: 4rem;
-  color: #ea638c;
+  color: var(--light-color);
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
 
@@ -193,7 +192,7 @@ i {
 
 .text-lrg {
   margin-bottom: -2.5rem;
-  color: #ea638c;
+  color: var(--light-color);
   font-size: 1.5rem;
   font-weight: bold;
   white-space: nowrap;
@@ -280,7 +279,7 @@ i {
 }
 
 .close-button:hover {
-  color: #ea638c;
+  color: var(--light-color);
   background: none;
 }
 
@@ -301,7 +300,7 @@ i {
   height: 22rem;
   border-radius: 10%;
   overflow: hidden;
-  border: 4px solid #ea638c;
+  border: 4px solid var(--light-color);
   flex-shrink: 0;
 }
 
@@ -333,7 +332,7 @@ i {
 
 .skills-title {
   font-size: 4.5rem;
-  color: #ea638c;
+  color: var(--light-color);
   margin-bottom: 2rem;
   text-align: left;
   font-weight: bold;
@@ -380,7 +379,7 @@ i {
 
 .project-title {
   font-size: 4.5rem;
-  color: #ea638c;
+  color: var(--light-color);
   margin-bottom: 4rem;
   text-align: left;
   font-weight: bold;
