--- a/style.css
+++ b/style.css
@@ -713,4 +713,18 @@ i {
   .about-text {
     font-size: 0.5rem;
   }
+
+  .about-section {
+    grid-template-columns: 1fr;
+    padding: 2rem 1rem;
+  }
+
+  .about-title {
+    font-size: 1rem;
+    margin-top: 3rem;
+  }
+
+  .about-image {
+    min-height: 100px;
+  }
 }
