--- a/style.css
+++ b/style.css
@@ -712,19 +712,24 @@ i {
   /* About */
   .about-text {
     font-size: 0.5rem;
+    white-space: wrap;
   }
 
   .about-section {
-    grid-template-columns: 1fr;
     padding: 2rem 1rem;
   }
 
   .about-title {
-    font-size: 1rem;
+    font-size: 1.8rem;
     margin-top: 3rem;
   }
 
   .about-image {
     min-height: 100px;
+  }
+
+  .text-lrg {
+    font-size: 0.5rem;
+    white-space: wrap;
   }
 }
